--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "openai": "^4.92.1"
   }
 }
