--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^22.14.0",
     "cors": "^2.8.5",
     "nodemon": "^3.1.9",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "openai": "^4.92.1"
